--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Debug local",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}",
+            "program": "${workspaceFolder}/view_spot_finder_local/main.go",
             "args": [
-                "./mesh[1][1][1][1].json",
+                "../mesh[1][1][1][1].json",
                 "20"
             ]
         }
