--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,13 +22,13 @@ jobs:
       run: cd view_spot_finder_local && go mod verify
       
     - name: Build-windows
-      run: env GOOS=windows GOARCH=amd64 go build -v ./...
+      run: cd view_spot_finder_local && env GOOS=windows GOARCH=amd64 go build -v ./...
       
     - name: Build-linux
-      run: env GOOS=linux GOARCH=amd64 go build -v ./...
+      run: cd view_spot_finder_local && env GOOS=linux GOARCH=amd64 go build -v ./...
     
     - name: Build-mac
-      run: env GOOS=darwin GOARCH=amd64 go build -v ./...
+      run: cd view_spot_finder_local && env GOOS=darwin GOARCH=amd64 go build -v ./...
       
     - name: Create Release
       id: create_release
