--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,12 +42,34 @@ jobs:
         prerelease: false
         
     - name: Upload Release Asset
-      id: upload-release-asset 
+      id: upload-windows-release-asset 
       uses: actions/upload-release-asset@v1
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./view_spot_finder_local.exe
-          asset_name: view_spot_finder_local.zip
+          asset_path: ./view_spot_finder_local/view_spot_finder_local.exe
+          asset_name: view_spot_finder_local_win.zip
+          asset_content_type: application/zip
+          
+    - name: Upload Release Asset
+      id: upload-linux-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./view_spot_finder_local/view_spot_finder_local
+          asset_name: view_spot_finder_local_lin.zip
+          asset_content_type: application/zip
+          
+    - name: Upload Release Asset
+      id: upload-mac-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./view_spot_finder_local/view_spot_finder_local
+          asset_name: view_spot_finder_local_lin.zip
           asset_content_type: application/zip
