--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,46 +30,54 @@ jobs:
     - name: Build-mac
       run: cd view_spot_finder_local && env GOOS=darwin GOARCH=amd64 go build -o ../bin/view_spot_finder_mac
       
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v1.0
-        release_name: Release v1.0
-        draft: false
-        prerelease: false
+    - name: Show folder
+      run: |
+        pwd
+        cd ~
+        pwd
+        cd ./bin/
+        ls -l
+      
+#     - name: Create Release
+#       id: create_release
+#       uses: actions/create-release@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         tag_name: v1.0
+#         release_name: Release v1.0
+#         draft: false
+#         prerelease: false
         
-    - name: Upload Release Asset
-      id: upload-windows-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./bin/view_spot_finder_win.exe
-          asset_name: view_spot_finder_local_win.zip
-          asset_content_type: application/zip
+#     - name: Upload Release Asset
+#       id: upload-windows-release-asset 
+#       uses: actions/upload-release-asset@v1
+#       env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#           asset_path: ./bin/view_spot_finder_win.exe
+#           asset_name: view_spot_finder_local_win.zip
+#           asset_content_type: application/zip
           
-    - name: Upload Release Asset
-      id: upload-linux-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./bin/view_spot_finder_lin
-          asset_name: view_spot_finder_local_lin.zip
-          asset_content_type: application/zip
+#     - name: Upload Release Asset
+#       id: upload-linux-release-asset 
+#       uses: actions/upload-release-asset@v1
+#       env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#           asset_path: ./bin/view_spot_finder_lin
+#           asset_name: view_spot_finder_local_lin.zip
+#           asset_content_type: application/zip
           
-    - name: Upload Release Asset
-      id: upload-mac-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./bin/view_spot_finder_mac
-          asset_name: view_spot_finder_local_mac.zip
-          asset_content_type: application/zip
+#     - name: Upload Release Asset
+#       id: upload-mac-release-asset 
+#       uses: actions/upload-release-asset@v1
+#       env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#           asset_path: ./bin/view_spot_finder_mac
+#           asset_name: view_spot_finder_local_mac.zip
+#           asset_content_type: application/zip
