--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,7 +56,7 @@ jobs:
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./bin/view_spot_finder_win.exe
-          asset_name: view_spot_finder_local_win.zip
+          asset_name: view_spot_finder_local_win.exe
           asset_content_type: application/zip
           
     - name: Upload Release Asset
@@ -67,7 +67,7 @@ jobs:
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./bin/view_spot_finder_lin
-          asset_name: view_spot_finder_local_lin.zip
+          asset_name: view_spot_finder_local_lin
           asset_content_type: application/zip
           
     - name: Upload Release Asset
@@ -78,5 +78,5 @@ jobs:
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./bin/view_spot_finder_mac
-          asset_name: view_spot_finder_local_mac.zip
+          asset_name: view_spot_finder_local_mac
           asset_content_type: application/zip
